# vtherm_climate_replication

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: bootstrap-python.sh  devcontainer.json  setup-homeassistant.sh
.github/agents/: tech-doc.agent.md  vtherm-replication.agent.md  vtherm.agent.md
.github/workflows/: cron.yaml  pull.yml  push.yml  release.yml  testus.yaml
.homeassistant/: .gitignore  configuration.yaml
custom_components/: __init__.py
custom_components/vtherm_climate_replication/: __init__.py  climate_replication.py  config_flow.py  const.py  manifest.json  switch.py
custom_components/vtherm_climate_replication/translations/: en.json  fr.json
tests/: conftest.py  test_climate_replication.py  test_config_flow.py  test_init.py  test_manifest.py
